--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/profile-image.jpg" alt="Ismay Profile Image" width="200px"></td>
+      <td><img src="../mages/profile-image.jpg" alt="Ismay Profile Image" width="200px"></td>
       <td>
         <h1>Ismay Verbeek</h1>
         <p><em>Front End Developer</em></p>
